--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "0.1",
 
   "description": "Adds a browser action icon to the toolbar. Click the button to choose a beast. The active tab's body content is then replaced with a picture of the chosen beast. See https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Examples#beastify",
-  "homepage_url": "https://github.com/saypop/Sibling"
+  "homepage_url": "https://github.com/saypop/Sibling",
 
   "icons": {
     "48": "icons/siblings-48.png"
